--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MyFolio - Cebotaru Daniel</title>
     <link rel="icon" href="/images/blob.svg" />
     <link rel="stylesheet" href="/css/main.css" />
-		<link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/css/responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -46,13 +46,7 @@
                 </ul>
               </div>
               <div>
-                <h1
-                  class="contactbutton"
-                  data-aos="fade-down"
-                  data-aos-delay="550"
-                >
-                  Contact Me
-                </h1>
+                <h1 class="contactbutton">Contact Me</h1>
               </div>
             </nav>
 
@@ -82,10 +76,7 @@
                   </div>
                 </div>
               </div>
-              <div
-                class="rightpart "
-								
-              >
+              <div class="rightpart">
                 <img src="images/transparent/main.png" alt="image" />
               </div>
             </div>
@@ -104,7 +95,7 @@
 
             <div class="myservices" id="aboutme">
               <div class="servicecards">
-                <div class="meow ">
+                <div class="meow">
                   <img src="images/transparent/18.png" alt="" />
                 </div>
 
@@ -144,11 +135,17 @@
               <div class="priorities">
                 <h1 class="prop_text">My Priorities !</h1>
                 <div class="pros">
-                  <div class="prosdiv" data-aos="fade-down" data-aos-once="true" data-aos-delay="200">
+                  <div
+                    class="prosdiv"
+                    data-aos="fade-down"
+                    data-aos-once="true"
+                    data-aos-delay="200"
+                  >
                     <img
                       class="hoversvg"
                       src="/images/transparent/20.png"
                       alt="fast"
+                      loading="lazy"
                     />
                     <h2>Fast Page</h2>
                     <p>
@@ -156,29 +153,47 @@
                       priority.
                     </p>
                   </div>
-                  <div class="prosdiv" data-aos="fade-down" data-aos-once="true" data-aos-delay="400">
+                  <div
+                    class="prosdiv"
+                    data-aos="fade-down"
+                    data-aos-once="true"
+                    data-aos-delay="400"
+                  >
                     <img
                       class="hoversvg"
                       src="/images/transparent/responsive.png"
                       alt="responsive"
+                      loading="lazy"
                     />
                     <h2>Responsive</h2>
                     <p>My layouts will work on any device.</p>
                   </div>
-                  <div class="prosdiv" data-aos="fade-down" data-aos-once="true" data-aos-delay="600">
+                  <div
+                    class="prosdiv"
+                    data-aos="fade-down"
+                    data-aos-once="true"
+                    data-aos-delay="600"
+                  >
                     <img
                       class="hoversvg"
                       src="/images/transparent/8.png"
                       alt="intuitive"
+                      loading="lazy"
                     />
                     <h2>Intuitive</h2>
                     <p>Strong preference for easy to use, intuitive UX/UI.</p>
                   </div>
-                  <div class="prosdiv" data-aos="fade-down" data-aos-once="true" data-aos-delay="900">
+                  <div
+                    class="prosdiv"
+                    data-aos="fade-down"
+                    data-aos-once="true"
+                    data-aos-delay="900"
+                  >
                     <img
                       class="hoversvg"
                       src="/images/transparent/17.png"
                       alt="prosdiv"
+                      loading="lazy"
                     />
                     <h2>Dynamic</h2>
                     <p>
@@ -195,18 +210,31 @@
                   <div class="leftme">
                     <div class="skillrow">
                       <div class="skill">
-                        <img src="/images/skill/174854.png" alt="" />
+                        <img
+                          loading="lazy"
+                          src="/images/skill/174854.png"
+                          alt="skill"
+                        />
                       </div>
                       <div class="skill">
-                        <img src="/images/skill/css.png" alt="" />
+                        <img
+                          loading="lazy"
+                          src="/images/skill/css.png"
+                          alt="skill"
+                        />
                       </div>
                       <div class="skill">
-                        <img src="/images/skill/javascript.png" alt="" />
+                        <img
+                          loading="lazy"
+                          src="/images/skill/javascript.png"
+                          alt="skill"
+                        />
                       </div>
                       <div class="skill">
                         <img
                           src="/images/skill/Tailwind_CSS_Logo.svg.png"
-                          alt=""
+                          alt="skill"
+                          loading="lazy"
                         />
                       </div>
                     </div>
@@ -219,14 +247,23 @@
                       <div class="skill">
                         <img
                           src="/images/skill/Bootstrap_logo.svg.png"
+                          alt="skill"
+                          loading="lazy"
+                        />
+                      </div>
+                      <div class="skill">
+                        <img
+                          loading="lazy"
+                          src="/images/skill/react.png"
                           alt=""
                         />
                       </div>
                       <div class="skill">
-                        <img src="/images/skill/react.png" alt="" />
-                      </div>
-                      <div class="skill">
-                        <img src="/images/skill/sass.png" alt="" />
+                        <img
+                          loading="lazy"
+                          src="/images/skill/sass.png"
+                          alt=""
+                        />
                       </div>
                     </div>
                   </div>
@@ -248,7 +285,7 @@
                 <img class="imagenear" src="/images/transparent/7.png" alt="" />
                 <div class="row1">
                   <div class="card1">
-                    <img src="/images/1website.png" alt="" />
+                    <img loading="lazy" src="/images/1website.png" alt="" />
                     <a href="https://site-mobila.netlify.app/" target="_blank"
                       ><h3>Furniture Website</h3></a
                     >
@@ -306,45 +343,59 @@
           </section>
 
           <footer>
-						<div class="contactform">
-							<div class="maincontacttext">
-								<h1>Contact me to see my detailed pitch deck and deep dive into my approach. Please, get in touch:</h1>
-							</div>
-	
-							<form class="contact" action="">
-								<input type="text" placeholder="What is your name?" name="" id="">
-								<input type="text" placeholder="Email">
-								<textarea name="" id="" cols="30" rows="10" placeholder="Tell me about your project/ideas"></textarea>
-								<div class="contactform__buttons">
-									<button class="buttoncontact button__hover" type="submit">Send your message</button>
-									<a class="buttoncontact button__hover" href="mailto:danyelcebotaru@gmail.com">Send me an Email</a>
-								</div>
-							</form>
-						</div>
+            <div class="contactform">
+              <div class="maincontacttext">
+                <h1>
+                  Contact me to see my detailed pitch deck and deep dive into my
+                  approach. Please, get in touch:
+                </h1>
+              </div>
 
-						<div class="socialsfooter">
-							<h1>Made with ❤️ by Cebotaru Daniel</h1>
-							<div class="socials">
-								<a target="_blank" href="https://github.com/CebotaruDaniel">
-									<img
-										src="/images/socialmedia/whitesocial2.svg"
-										alt="github"
-								/></a>
-								<a
-									target="_blank"
-									href="https://www.linkedin.com/in/daniel-cebotaru-a495a8250/"
-								>
-									<img
-										src="/images/socialmedia/whitesocial.svg"
-										alt="linkedin"
-								/></a>
-								<a target="_blank" href="">
-									<img
-										src="/images/socialmedia/whitesocial3.svg"
-										alt="twitter"
-								/></a>
-							</div>
-						</div>
+              <form class="contact" action="">
+                <input
+                  type="text"
+                  placeholder="What is your name?"
+                  name=""
+                  id=""
+                />
+                <input type="text" placeholder="Email" />
+                <textarea
+                  name=""
+                  id=""
+                  cols="30"
+                  rows="10"
+                  placeholder="Tell me about your project/ideas"
+                ></textarea>
+                <div class="contactform__buttons">
+                  <button class="buttoncontact button__hover" type="submit">
+                    Send your message
+                  </button>
+                  <a
+                    class="buttoncontact button__hover"
+                    href="mailto:danyelcebotaru@gmail.com"
+                    >Send me an Email</a
+                  >
+                </div>
+              </form>
+            </div>
+
+            <div class="socialsfooter">
+              <h1>Made with ❤️ by Cebotaru Daniel</h1>
+              <div class="socials">
+                <a target="_blank" href="https://github.com/CebotaruDaniel">
+                  <img src="/images/socialmedia/whitesocial2.svg" alt="github"
+                /></a>
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/daniel-cebotaru-a495a8250/"
+                >
+                  <img src="/images/socialmedia/whitesocial.svg" alt="linkedin"
+                /></a>
+                <a target="_blank" href="">
+                  <img src="/images/socialmedia/whitesocial3.svg" alt="twitter"
+                /></a>
+              </div>
+            </div>
           </footer>
         </div>
       </div>
