--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
+    <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
+    <script
+      defer
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+    ></script>
   </head>
   <body>
+    <div id="loading">
+      <div id="loading-image" class="spinner">
+        <div class="loader l1"></div>
+        <div class="loader l2"></div>
+      </div>
+    </div>
     <div class="wrapper">
       <div class="content">
         <div class="container">
@@ -46,7 +56,9 @@
                 </ul>
               </div>
               <div>
-                <h1 class="contactbutton">Contact Me</h1>
+                <a href="#contactme"
+                  ><h1 class="contactbutton">Contact Me</h1></a
+                >
               </div>
             </nav>
 
@@ -54,7 +66,7 @@
               <div class="leftpart">
                 <div class="about">
                   <div class="introname">
-                    <h1 class="introtext text">
+                    <h1 class="introtext">
                       Hey, I'm <span class="name">Daniel</span>
                     </h1>
                     <h1 class="introtext2 text">
@@ -139,13 +151,12 @@
                     class="prosdiv"
                     data-aos="fade-down"
                     data-aos-once="true"
-                    data-aos-delay="200"
+                    data-aos-delay="100"
                   >
                     <img
                       class="hoversvg"
                       src="/images/transparent/20.png"
                       alt="fast"
-                      loading="lazy"
                     />
                     <h2>Fast Page</h2>
                     <p>
@@ -157,13 +168,12 @@
                     class="prosdiv"
                     data-aos="fade-down"
                     data-aos-once="true"
-                    data-aos-delay="400"
+                    data-aos-delay="300"
                   >
                     <img
                       class="hoversvg"
                       src="/images/transparent/responsive.png"
                       alt="responsive"
-                      loading="lazy"
                     />
                     <h2>Responsive</h2>
                     <p>My layouts will work on any device.</p>
@@ -172,13 +182,12 @@
                     class="prosdiv"
                     data-aos="fade-down"
                     data-aos-once="true"
-                    data-aos-delay="600"
+                    data-aos-delay="500"
                   >
                     <img
                       class="hoversvg"
                       src="/images/transparent/8.png"
                       alt="intuitive"
-                      loading="lazy"
                     />
                     <h2>Intuitive</h2>
                     <p>Strong preference for easy to use, intuitive UX/UI.</p>
@@ -187,13 +196,12 @@
                     class="prosdiv"
                     data-aos="fade-down"
                     data-aos-once="true"
-                    data-aos-delay="900"
+                    data-aos-delay="800"
                   >
                     <img
                       class="hoversvg"
                       src="/images/transparent/17.png"
                       alt="prosdiv"
-                      loading="lazy"
                     />
                     <h2>Dynamic</h2>
                     <p>
@@ -217,24 +225,15 @@
                         />
                       </div>
                       <div class="skill">
-                        <img
-                          loading="lazy"
-                          src="/images/skill/css.png"
-                          alt="skill"
-                        />
+                        <img src="/images/skill/css.png" alt="skill" />
                       </div>
                       <div class="skill">
-                        <img
-                          loading="lazy"
-                          src="/images/skill/javascript.png"
-                          alt="skill"
-                        />
+                        <img src="/images/skill/javascript.png" alt="skill" />
                       </div>
                       <div class="skill">
                         <img
                           src="/images/skill/Tailwind_CSS_Logo.svg.png"
                           alt="skill"
-                          loading="lazy"
                         />
                       </div>
                     </div>
@@ -248,22 +247,13 @@
                         <img
                           src="/images/skill/Bootstrap_logo.svg.png"
                           alt="skill"
-                          loading="lazy"
                         />
                       </div>
                       <div class="skill">
-                        <img
-                          loading="lazy"
-                          src="/images/skill/react.png"
-                          alt=""
-                        />
+                        <img src="/images/skill/react.png" alt="" />
                       </div>
                       <div class="skill">
-                        <img
-                          loading="lazy"
-                          src="/images/skill/sass.png"
-                          alt=""
-                        />
+                        <img src="/images/skill/sass.png" alt="" />
                       </div>
                     </div>
                   </div>
@@ -275,7 +265,7 @@
                 <path
                   fill="#fff"
                   fill-opacity="1"
-                  d="M0,256L48,256C96,256,192,256,288,213.3C384,171,480,85,576,69.3C672,53,768,107,864,122.7C960,139,1056,117,1152,122.7C1248,128,1344,160,1392,176L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
+                  d="M0,288L120,245.3C240,203,480,117,720,112C960,107,1200,181,1320,218.7L1440,256L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"
                 ></path>
               </svg>
             </div>
@@ -283,9 +273,14 @@
               <h1>My Projects</h1>
               <div class="cards">
                 <img class="imagenear" src="/images/transparent/7.png" alt="" />
-                <div class="row1">
+                <div
+                  class="row1"
+                  data-aos="fade-in"
+                  data-aos-once="true"
+                  data-aos-duration="3000"
+                >
                   <div class="card1">
-                    <img loading="lazy" src="/images/1website.png" alt="" />
+                    <img src="/images/1website.png" alt="" />
                     <a href="https://site-mobila.netlify.app/" target="_blank"
                       ><h3>Furniture Website</h3></a
                     >
@@ -344,7 +339,7 @@
 
           <footer>
             <div class="contactform">
-              <div class="maincontacttext">
+              <div class="maincontacttext" id="contactme">
                 <h1>
                   Contact me to see my detailed pitch deck and deep dive into my
                   approach. Please, get in touch:
@@ -410,8 +405,15 @@
       src="https://code.jquery.com/jquery-2.2.0.min.js"
       type="text/javascript"
     ></script>
-    <script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="/js/main.js" defer></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"
+    ></script>
+    <script
+      defer
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+    ></script>
+    <script defer src="/js/main.js"></script>
+    <script defer src="/js/preloader.js"></script>
   </body>
 </html>
