--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
                 </div>
               </div>
               <div class="rightpart">
-                <img src="images/transparent/main.png" alt="image" />
+                <img src="images/transparent/mainpage.png" alt="image" />
+                <div class="uplayer">
+                  <img
+                    class="firstlayer"
+                    src="/images/transparent/uplayer.png"
+                    alt=""
+                  />
+                </div>
               </div>
             </div>
           </div>
@@ -108,7 +115,7 @@
             <div class="myservices" id="aboutme">
               <div class="servicecards">
                 <div class="meow">
-                  <img src="images/transparent/18.png" alt="" />
+                  <img src="images/transparent/secondimage.png" alt="" />
                 </div>
 
                 <div class="cardd">
@@ -260,7 +267,7 @@
                 </div>
               </div>
             </div>
-            <div class="wave2" id="port">
+            <div class="wave2" >
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path
                   fill="#fff"
@@ -269,10 +276,10 @@
                 ></path>
               </svg>
             </div>
-            <div class="portofolio">
+            <div class="portofolio" id="port">
               <h1>My Projects</h1>
               <div class="cards">
-                <img class="imagenear" src="/images/transparent/7.png" alt="" />
+                <img class="imagenear" src="/images/transparent/5.png" alt="" />
                 <div
                   class="row1"
                   data-aos="fade-in"
@@ -296,12 +303,29 @@
 
                   <div class="card1">
                     <img src="/images/2website.png" alt="" />
-                    <a href="https://site-mobila.netlify.app/" target="_blank"
+                    <a
+                      href="https://fragrancewebsite.netlify.app/"
+                      target="_blank"
                       ><h3>Fragrance Website</h3></a
                     >
                     <div class="usedskills">
                       <img src="/images/skill/174854.png" alt="" />
                       <img src="/images/skill/sass.png" alt="" />
+                      <img src="/images/skill/javascript.png" alt="" />
+                    </div>
+                  </div>
+
+                  <div class="card1">
+                    <img src="/images/5website.png" alt="" />
+                    <a href="https://site-mobila.netlify.app/" target="_blank"
+                      ><h3>Crypto Website</h3></a
+                    >
+                    <div class="usedskills">
+                      <img src="/images/skill/174854.png" alt="" />
+                      <img
+                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
+                        alt=""
+                      />
                       <img src="/images/skill/javascript.png" alt="" />
                     </div>
                   </div>
@@ -321,17 +345,7 @@
                       <img src="/images/skill/php.png" alt="" />
                     </div>
                   </div>
-                  <div class="card1">
-                    <img src="/images/3website.png" alt="" />
-                    <a href="https://site-mobila.netlify.app/" target="_blank"
-                      ><h3>Internship Website</h3></a
-                    >
-                    <div class="usedskills">
-                      <img src="/images/skill/174854.png" alt="" />
-                      <img src="/images/skill/sass.png" alt="" />
-                      <img src="/images/skill/javascript.png" alt="" />
-                    </div>
-                  </div>
+
                 </div>
               </div>
             </div>
@@ -377,7 +391,10 @@
             <div class="socialsfooter">
               <h1>Made with ❤️ by Cebotaru Daniel</h1>
               <div class="socials">
-                <a target="_blank" href="https://github.com/CebotaruDaniel">
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/daniel-cebotaru-a495a8250/"
+                >
                   <img src="/images/socialmedia/whitesocial2.svg" alt="github"
                 /></a>
                 <a
@@ -386,7 +403,7 @@
                 >
                   <img src="/images/socialmedia/whitesocial.svg" alt="linkedin"
                 /></a>
-                <a target="_blank" href="">
+                <a target="_blank" href="https://github.com/CebotaruDaniel">
                   <img src="/images/socialmedia/whitesocial3.svg" alt="twitter"
                 /></a>
               </div>
