--- a/index.html
+++ b/index.html
@@ -20,11 +20,23 @@
     ></script>
   </head>
   <body>
-    <div id="loading">
+		<div class="preloader">
+			    <div id="loading">
       <div id="loading-image" class="spinner">
-        <div class="loader l1"></div>
-        <div class="loader l2"></div>
+				<div class="loader">
+					<div class="loader-square"></div>
+					<div class="loader-square"></div>
+					<div class="loader-square"></div>
+					<div class="loader-square"></div>
+					<div class="loader-square"></div>
+					<div class="loader-square"></div>
+					<div class="loader-square"></div>
+					</div>
+					<h1><span class="spanpreloader">My</span>Folio by Cebotaru Daniel</h1>
       </div>
+		</div>
+
+
     </div>
     <div class="wrapper">
       <div class="content">
@@ -351,9 +363,9 @@
             </div>
           </section>
 
-          <footer>
+          <footer id="contactme">
             <div class="contactform">
-              <div class="maincontacttext" id="contactme">
+              <div class="maincontacttext" >
                 <h1>
                   Contact me to see my detailed pitch deck and deep dive into my
                   approach. Please, get in touch:
