--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div class="loader-square"></div>
 					<div class="loader-square"></div>
 					</div>
-					<h1><span class="spanpreloader">My</span>Folio by Cebotaru Daniel</h1>
+					<h1><span class="spanpreloader">My</span>Folio</h1>
       </div>
 		</div>
 
@@ -41,6 +41,7 @@
     <div class="wrapper">
       <div class="content">
         <div class="container">
+					<div class="fixedparticle"></div>
           <div class="firstpage animate__animated animate__fadeInDown">
             <nav class="navbarfull topnav" id="myTopnav">
               <div class="logo">
