--- a/index.html
+++ b/index.html
@@ -13,40 +13,35 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
-    <script
-      defer
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"
-    ></script>
   </head>
   <body>
-		<div class="preloader">
-			    <div id="loading">
-      <div id="loading-image" class="spinner">
-				<div class="loader">
-					<div class="loader-square"></div>
-					<div class="loader-square"></div>
-					<div class="loader-square"></div>
-					<div class="loader-square"></div>
-					<div class="loader-square"></div>
-					<div class="loader-square"></div>
-					<div class="loader-square"></div>
-					</div>
-					<h1><span class="spanpreloader">My</span>Folio</h1>
+    <div class="preloader">
+      <div id="loading">
+        <div id="loading-image" class="spinner">
+          <div class="loader">
+            <div class="loader-square"></div>
+            <div class="loader-square"></div>
+            <div class="loader-square"></div>
+            <div class="loader-square"></div>
+            <div class="loader-square"></div>
+            <div class="loader-square"></div>
+            <div class="loader-square"></div>
+          </div>
+          <h1><span class="spanpreloader">My</span>Folio</h1>
+        </div>
       </div>
-		</div>
-
-
     </div>
     <div class="wrapper">
       <div class="content">
         <div class="container">
-					<div class="fixedparticle"></div>
+          <div class="fixedparticle"></div>
           <div class="firstpage animate__animated animate__fadeInDown">
             <nav class="navbarfull topnav" id="myTopnav">
               <div class="logo">
                 <div>
-                  <h1><span class="spanlogo">My</span>Folio</h1>
+                  <a href=""
+                    ><h1><span class="spanlogo">My</span>Folio</h1></a
+                  >
                 </div>
               </div>
               <div>
@@ -280,7 +275,7 @@
                 </div>
               </div>
             </div>
-            <div class="wave2" >
+            <div class="wave2">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path
                   fill="#fff"
@@ -302,7 +297,7 @@
                   <div class="card1">
                     <img src="/images/1website.png" alt="" />
                     <a href="https://site-mobila.netlify.app/" target="_blank"
-                      ><h3>Furniture Website</h3></a
+                      ><h3>YourKitchen.com</h3></a
                     >
                     <div class="usedskills">
                       <img src="/images/skill/174854.png" alt="" />
@@ -330,13 +325,13 @@
 
                   <div class="card1">
                     <img src="/images/5website.png" alt="" />
-                    <a href="https://site-mobila.netlify.app/" target="_blank"
-                      ><h3>Crypto Website</h3></a
+                    <a href="https://villageio.netlify.app/" target="_blank"
+                      ><h3>Village.io</h3></a
                     >
                     <div class="usedskills">
                       <img src="/images/skill/174854.png" alt="" />
                       <img
-                        src="/images/skill/Tailwind_CSS_Logo.svg.png"
+                        src="/images/skill/css.png"
                         alt=""
                       />
                       <img src="/images/skill/javascript.png" alt="" />
@@ -344,9 +339,11 @@
                   </div>
 
                   <div class="card1">
-                    <img src="/images/4website.png" alt="" />
-                    <a href="https://site-mobila.netlify.app/" target="_blank"
-                      ><h3>Cereal Website</h3></a
+                    <img src="/images/3website.png" alt="" />
+                    <a
+                      href="https://reactappdaniel.netlify.app/"
+                      target="_blank"
+                      ><h3>Dior.com</h3></a
                     >
                     <div class="usedskills">
                       <img src="/images/skill/174854.png" alt="" />
@@ -355,10 +352,9 @@
                         alt=""
                       />
                       <img src="/images/skill/javascript.png" alt="" />
-                      <img src="/images/skill/php.png" alt="" />
+                      <img src="/images/skill/react.png" alt="" />
                     </div>
                   </div>
-
                 </div>
               </div>
             </div>
@@ -366,7 +362,7 @@
 
           <footer id="contactme">
             <div class="contactform">
-              <div class="maincontacttext" >
+              <div class="maincontacttext">
                 <h1>
                   Contact me to see my detailed pitch deck and deep dive into my
                   approach. Please, get in touch:
@@ -425,6 +421,11 @@
         </div>
       </div>
     </div>
+    <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script
+      defer
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+    ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
       integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
@@ -438,10 +439,6 @@
     <script
       defer
       src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"
-    ></script>
-    <script
-      defer
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
     ></script>
     <script defer src="/js/main.js"></script>
     <script defer src="/js/preloader.js"></script>
